--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.6.9",
   "private": true,
   "scripts": {
-    "build": "browserify ./client/app.jsx -t babelify --outfile ./public/js/app.js",
+    "build": "browserify ./client/app.jsx -t [ babelify --presets [ @babel/preset-env @babel/preset-react ] ] --outfile ./public/js/app.js",
     "start": "node app.js"
   },
   "dependencies": {
     "express": "^4.13.1",
-    "react": "^0.13.3",
-    "socket.io": "^1.3.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1"  
   },
   "devDependencies": {
-    "babelify": "^6.1.3",
-    "browserify": "^10.2.6"
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0",
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.21.0",
+    "@babel/preset-react": "^7.18.6"
   }
 }
